fix overlapping issue of fixed header

--- a/FreeCodeCamp/FullStack/CSS/Product Landing Page/product-landing-page.css
+++ b/FreeCodeCamp/FullStack/CSS/Product Landing Page/product-landing-page.css
@@ -42,7 +42,6 @@ h3{
     padding-right: 5%;
     position: fixed;
     top:0;
-    left:0;
     display:flex;
     background-color: var(--main-color1);
     border-bottom: 2px solid var(--secondary-color1);
@@ -148,7 +147,7 @@ input[type="email"]{
 
 }
 form{
-    margin: 0 auto;
+    margin: 80px auto 0 auto;
     width: 30%;
     display:flex;
     flex-direction: column;
